[tool.poetry]
name = "eptestbenchmanager"
version = "0.1.0"
description = ""
authors = ["Eric <eric@souder.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
epcomms = {path = "../EPComms/dist/epcomms-0.1.0-py3-none-any.whl"}
discord-py = "^2.4.0"
dash-daq = "^0.5.0"
numpy = "^2.1.1"
flask = "^3.1.0"
flask-socketio = "^5.5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"